Fix standalone example project builds