@@ -111,7 +111,6 @@ afterEvaluate {
     doFirst {
       jvmArgs += [
         '--module-path', files(configurations.runtimeClasspath, jar.archivePath).asPath,
-        '--add-modules', 'swim.store.db,swim.reflect',
         '--module', "${moduleName}/${mainClassName}",
       ]
       classpath = files()
@@ -121,12 +120,11 @@ afterEvaluate {
   startScripts {
     inputs.property("moduleName", moduleName)
     doFirst {
-      classpath = files()
       defaultJvmOpts = [
         '--module-path', 'APP_HOME_LIBS',
-        '--add-modules', 'swim.store.db,swim.reflect',
         '--module', "${moduleName}/${mainClassName}",
       ]
+      classpath = files()
     }
     doLast {
       def bashFile = new File(outputDir, applicationName)
